# first_flask_app

./: README.md  index.html  pyproject.toml  wsgi.py
wikisearch/: __init__.py  inference.py  prompts.py  search.py  summarize.py
